# routes/api.php
@@ -26,4 +26,10 @@ Route::group([
     Route::post("live/radio/create", [ApiController::class, "createliveradio"]);
     Route::post("live/radio/update", [ApiController::class, "updateliveradio"]);
     Route::delete("live/radio/delete", [ApiController::class, "deleteliveradio"]);
+
+    // categories
+    Route::get("categories/list", [ApiController::class, "categories"]);
+    Route::post("categories/create", [ApiController::class, "createcategories"]);
+    Route::post("categories/update", [ApiController::class, "updatecategories"]);
+    Route::delete("categories/delete", [ApiController::class, "deletecategories"]);
 });
